--- a/view/recipe.html
+++ b/view/recipe.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <title>레시피 공유</title>
   <script defer src="/recipe.js"></script>
-  <link rel="stylesheet" href="/recipe.css" />
+  <link rel="stylesheet" href="/recipe.css"/>
 </head>
 <body>
   <main>
     <h1>🍳레시피 등록🍳</h1>
     <div>
       <label for="title-input">레시피 명</label>
-      <input type="text" id="title-input" name="title" placeholder="레시피 이름을 적어주세요🫘" />
+      <input type="text" id="title-input" name="title" placeholder="레시피 이름을 적어주세요.🍕" />
     </div>
     <div>
       <label for="content-input">만드는 법</label>
-      <textarea id="content-input" name="content" placeholder="내용을 적어주세요.🫘"></textarea>
+      <textarea id="content-input" name="content" placeholder="내용을 적어주세요.🍙"></textarea>
     </div>
     <div>
       <label for="category-select">카테고리 번호</label>
@@ -33,7 +33,7 @@
       <option value="3">양식</option>
       <option value="4">일식</option>
     </select>
-    <span> - 클릭하면 밑에 상세화면이 나옵니다.</span>
+    <span>- 클릭하면 밑에 상세화면이 나옵니다.</span>
     <br>
     <table>
       <thead>
